Adicionado incrementos e correções

--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 
 % add sintax highlight to qml code
 \lstdefinelanguage{qml} {
-	morekeywords={Connections, target, onEventNotify, if, else}
+	morekeywords={Item, Component, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError}
 }
 
 \renewcommand{\lstlistingname}{Algoritmo}
@@ -86,8 +86,8 @@
 	\input{sections/2-referencial-bibliografico.tex}
 	\input{sections/3-trabalhos-relacionados.tex}
 	\input{sections/4-solucao-desenvolvida.tex}
-	%\input{sections/5-avaliacao.tex}
-	%\input{sections/6-conclusao.tex}
+	\input{sections/5-avaliacao.tex}
+	\input{sections/6-conclusao.tex}
 
 	% to produce the bibliography for the citations in your paper.
 	\bibliographystyle{abbrv}
