--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -21,7 +21,7 @@ MoCA (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece
 
 
 %artigo 3%
-\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à Tecnologia WEB Service Java}\par
+\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java}\par
 O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks PhoneGap e Sencha Touch. Os aplicativos desenvolvidos usando o PhoneGap são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS. O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação RestFul utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks PhoneGap e Sencha Touch tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  PhoneGap dispõe uma arquitetura MVC e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos Javascript. O Sencha Touch dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
 
@@ -29,7 +29,7 @@ O trabalho teve como objetivo principal, realizar análise e estudo sobre as tec
 \centering
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
-Recurso & Este trabalho & CReAMA & MoCA & PhoneGap &  \\ \hline
+Recurso & Este trabalho & CReAMA & MoCA & Frameworks SenchaTouch/PhoneGap &  \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não & Não & Sim &  \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Sim & Não & Não &  \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não & Não & Não &  \\ \hline
@@ -37,5 +37,4 @@ Recurso & Este trabalho & CReAMA & MoCA & PhoneGap &  \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim & Sim & Sim &  \\ \hline
 \end{tabular}
 \caption{Tabela comparativa dos recursos desta arquitetura com os trabalhos relacionados}
-\label{my-label}
 \end{table*}
