--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -27,14 +27,15 @@ O trabalho teve como objetivo principal, realizar análise e estudo sobre as tec
 
 \begin{table*}[t]
 \centering
-\begin{tabular}{|c|c|c|c|c|c|}
+\label{my-label}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-Recurso & Este trabalho & CReAMA & MoCA & Frameworks SenchaTouch/PhoneGap &  \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não & Não & Sim &  \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Sim & Não & Não &  \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não & Não & Não &  \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Não & Sim & Sim &  \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim & Sim & Sim &  \\ \hline
+Recurso & Este trabalho & CReAMA & MoCA & Frameworks SenchaTouch/PhoneGap \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não & Não & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Sim & Não & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não & Não & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Não & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim & Sim & Sim \\ \hline
 \end{tabular}
 \caption{Tabela comparativa dos recursos desta arquitetura com os trabalhos relacionados}
 \end{table*}
